Update Gradle to 7.0.2 and Android Gradle Plugin to 7.0.2

--- a/platforms/android/demo/build.gradle
+++ b/platforms/android/demo/build.gradle
@@ -15,8 +15,6 @@ android {
     assets.srcDirs = ['../../../scenes']
   }
 
-  aaptOptions.ignoreAssetsPattern "!*.ttf"
-
   buildTypes {
     debug {
       debuggable true
@@ -25,6 +23,10 @@ android {
     release {
       minifyEnabled true
     }
+  }
+
+  androidResources {
+    ignoreAssetsPattern '!*.ttf'
   }
 
 }
