--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
           submodules: true
       - name: "Set version variable"
         run: |
-          TANGRAM_VERSION=$(if [[ ${{ github.ref_type }} == "tag" ]]; then echo ${{ github.ref_name }}; else echo ${{ github.sha }}; fi
+          TANGRAM_VERSION=$(if [[ ${{ github.ref_type }} == "tag" ]]; then echo ${{ github.ref_name }}; else echo ${{ github.sha }}; fi)
           echo "TANGRAM_VERSION=$TANGRAM_VERSION" >> $GITHUB_ENV
       - name: "Install Jazzy"
         run: sudo gem install jazzy --no-document --version 0.10.0
