--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: "Release"
-# on:
-#   push:
-#     tags: "[0-9]+.[0-9]+.[0-9]+"
-on: push
+on:
+  push:
+    branches:
+      - main
 jobs:
   build-deploy-ios:
     name: "Build and Deploy iOS Release"
