--- a/platforms/android/tangram/build.gradle
+++ b/platforms/android/tangram/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 group = 'com.mapzen.tangram'
-version = '0.17.1-SNAPSHOT'
+version = '0.17.1'
 
 android {
   compileSdkVersion 30
