--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 executors:
   android-executor:
     docker:
-      - image: circleci/android:api-30-ndk
+      - image: cimg/android:2023.12.1-ndk
     environment:
       GRADLE_OPTS: -Xmx2048m
       CCACHE_MAXSIZE: 400M
