--- a/platforms/android/demo/src/main/AndroidManifest.xml
+++ b/platforms/android/demo/src/main/AndroidManifest.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.mapzen.tangram.android"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    android:versionCode="1"
+    android:versionName="1.0">
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name="MainActivity"
-                  android:label="@string/app_name">
+
+    <application
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity
+            android:name="MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
