--- a/platforms/android/tangram/build.gradle
+++ b/platforms/android/tangram/build.gradle
@@ -5,6 +5,7 @@ version = '0.17.2-SNAPSHOT'
 
 android {
   compileSdk 30
+  ndkVersion "25.2.9519653"
 
   // Specific ABI targets can be chosen with the 'abis' property as a comma-separated list of ABIs.
   // From the command line, add '-Ptangram.abis=armeabi-v7a,x86,...' to only build those ABIs.
