--- a/platforms/android/tangram/build.gradle
+++ b/platforms/android/tangram/build.gradle
@@ -4,7 +4,8 @@ group = 'com.mapzen.tangram'
 version = '0.17.2-SNAPSHOT'
 
 android {
-  compileSdkVersion 30
+  compileSdk 30
+  ndkVersion "25.2.9519653"
 
   // Specific ABI targets can be chosen with the 'abis' property as a comma-separated list of ABIs.
   // From the command line, add '-Ptangram.abis=armeabi-v7a,x86,...' to only build those ABIs.
@@ -75,6 +76,8 @@ android {
       }
     }
   }
+
+  namespace 'com.mapzen.tangram'
 }
 
 dependencies {
